--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.0.6",
     "@headlessui/react": "^1.7.5",
     "@heroicons/react": "^2.0.13",
     "eslint-config-prettier": "^8.5.0",
