--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
     "@dnd-kit/core": "^6.0.6",
     "@headlessui/react": "^1.7.5",
     "@heroicons/react": "^2.0.13",
+    "@types/react-toastify": "^4.1.0",
+    "@types/use-persisted-state": "^0.3.1",
     "eslint-config-prettier": "^8.5.0",
     "next": "13.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-query": "^3.39.2",
+    "react-toastify": "^9.1.1",
+    "use-persisted-state": "^0.3.3",
     "zod": "^3.18.0"
   },
   "devDependencies": {
