Removed use-persisted-state package Implemented localStorage myself

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,7 @@
     "prettier"
   ],
   "rules": {
-    "@typescript-eslint/consistent-type-imports": "warn"
+    "@typescript-eslint/consistent-type-imports": "warn",
+    "react-hooks/rules-of-hooks": "error" // Checks rules of Hooks
   }
 }
